--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "mavuno-api",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "start": "node index.js"
-  },
+  "main": "index.js",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.2",
+    "twilio": "^4.23.0"
   }
 }
