--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "mavuno-api",
   "version": "0.1.0",
+  "private": true,
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "twilio": "^4.23.0"
