--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "twilio": "^4.23.0"
+    "twilio": "^4.23.0",
+    "sqlite3": "^5.1.7"
   }
 }
