--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "twilio": "^4.23.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.6",
+    "pg": "^8.11.3"
   }
 }
